--- a/TextEditor/Views/Docs/Index.cshtml
+++ b/TextEditor/Views/Docs/Index.cshtml
@@ -4,23 +4,29 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>Home Page</h1>
+<div class="container">
+    <h1 class="text-center mb-4">Your Documents</h1>
 
-<div class="d-flex justify-content-center align-items-center" style="width: 150px; height: 200px; background-color: lightgray; font-size: 100px">
-    <a style="text-decoration: none; color: black" asp-action="Create">+</a>
-</div>
-<span style="font-weight: bold">Blank Document</span>
+    <!-- Create New Document -->
+    <div class="d-flex justify-content-center mb-4">
+        <a class="doc-card d-flex flex-column justify-content-center align-items-center bg-light text-dark text-decoration-none" asp-action="Create">
+            <span style="font-size: 60px;">+</span>
+            <span class="fw-bold mt-2">New Document</span>
+        </a>
+    </div>
 
-<hr />
+    <hr />
 
-<div class="row">
-    @foreach (var item in Model)
-    {
-        <div class="col-2">
-            <div class="d-flex justify-content-center align-items-center" style="width: 150px; height: 200px; background-color: lightblue; font-size: 100px">
-                <a style="text-decoration: none; color: black" asp-action="Edit" asp-route-id="@item.Id">📝</a>
+    <!-- List Existing Documents -->
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-md-3 col-sm-6 mb-4">
+                <a class="doc-card d-flex flex-column justify-content-center align-items-center bg-primary text-white text-decoration-none" asp-action="Edit" asp-route-id="@item.Id">
+                    <span style="font-size: 50px;">📝</span>
+                    <span class="fw-bold mt-2">@item.Title</span>
+                </a>
             </div>
-            <span style="font-weight: bold">@item.Title</span>
-        </div>
-    }
+        }
+    </div>
 </div>
